review all gutter, and self alignment with general values (avoid looping)

--- a/scss/components/_columns.scss
+++ b/scss/components/_columns.scss
@@ -22,8 +22,10 @@ $columns-gutter-sizes: (
 // row
 [#{$loop-component-prefix}-column~="row"] {
     position: relative;
-    // left: -#{$columns-gutter};
-    margin-left: -#{$columns-gutter};
+    right: -#{$columns-gutter /2}; // to help with self alignment
+    left: -#{$columns-gutter * 2}; // valued increased to help with self alignment
+    margin-left: #{$columns-gutter}; //  to help with self alignment
+    margin-right: -#{$columns-gutter * 2}; // to help with self alignment
 
     display: flex;
     flex: 0 1 auto;
@@ -34,16 +36,13 @@ $columns-gutter-sizes: (
 
 // columns
 [#{$loop-component-prefix}-column*="col"] {
-    // padding-left: $columns-gutter;
-    // padding-bottom: $columns-gutter;
-
     flex-shrink: 0;
     flex-grow: 1;
-    flex-basis: 0;
+    // flex-basis: 0;
 
     min-width: 0;
-    max-width: 100%;
-    margin-left: #{$columns-gutter};
+    // max-width: 100%;
+    margin-left: inherit;
     margin-bottom:  #{$columns-gutter};
 }
 
@@ -97,12 +96,10 @@ $columns-gutter-sizes: (
         @if $use-columns-self-alignment == true
             and ($use-columns-self-alignment-breakpoints == true or isEmpty($suffix)) {
                 // horizontal alignment
-            [#{$loop-component-prefix}-column~="self-align-left#{$suffix}"]   {
-                margin-left: initial; margin-right: initial;
-            }
+            [#{$loop-component-prefix}-column~="self-align-left#{$suffix}"]   { margin-left: inherit; margin-right: initial; }
             [#{$loop-component-prefix}-column~="self-align-center#{$suffix}"] {
                 position: relative;
-                left: #{$columns-gutter / 2};
+                right: inherit;
                 margin-left: auto; margin-right: auto;
             }
             [#{$loop-component-prefix}-column~="self-align-right#{$suffix}"]  { margin-left: auto; margin-right: initial; }
@@ -172,11 +169,13 @@ $columns-gutter-sizes: (
 // gutters
 @each $gutter-name, $gutter-size in $columns-gutter-sizes {
     [#{$loop-component-prefix}-column~="gutter-#{$gutter-name}"] {
-        margin-left: -#{$gutter-size};
+        right: -#{$gutter-size /2};
+        left: -#{$gutter-size * 2};
+        margin-left: #{$gutter-size};
+        margin-right: -#{$gutter-size * 2};
 
         > [#{$loop-component-prefix}-column*="col"] {
             margin-bottom: $gutter-size;
-            margin-left: $gutter-size;
         }
     }
 }
